--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kugichkas-uilib",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": false,
   "author": {
     "email": "kugi@kugi.club",
@@ -9,9 +9,6 @@
   "main": "index.js",
   "homepage": "http://kugimiya.github.io/kugichkas-uilib",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
     "classname": "0.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -46,6 +43,9 @@
   "devDependencies": {
     "gh-pages": "^2.2.0",
     "node-sass": "^4.13.1",
-    "react-styleguidist": "^10.6.2"
+    "react-styleguidist": "^10.6.2",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.1",
+    "@testing-library/user-event": "^7.2.1"
   }
 }
